--- a/finishwebsite/picturepurrfect.html
+++ b/finishwebsite/picturepurrfect.html
@@ -113,7 +113,7 @@
 <!--Nala-->
 <div class="catbody">
     <div class="catphoto">
-        <img src="css/images/cats/Nala.png" height="300px" width="300px" style="padding: .5rem;">
+        <img src="css/images/cats/nala.png" height="300px" width="300px" style="padding: .5rem;">
         <img src="css/images/cats/c_nala.png" height="300px" width="300px" style="padding: .5rem;">
     </div>
         <p align="center" style="display: block; padding-left: .5rem; font-size: 22px; align-self: center; width: 60%;"><strong style="color: #ff2151;">Meet Nala:</strong> <br>Nala was a beauitful and very violent cat to everyone but my brother (She was a little less violent to him.) Nala was his very first cat and made him a permanent cat lover for life. <br> She is deeply missed everyday.<br>
