--- a/finishwebsite/contact.html
+++ b/finishwebsite/contact.html
@@ -57,7 +57,7 @@
         <br>
             <ul class="faq">
                 <li><b>What is the best way to contact you?</b></li>
-                <li style="padding-top: .5rem; padding-left: 1rem;">Go ahead and use the form above (click here) or for business inquiries: ---</li>
+                <li style="padding-top: .5rem; padding-left: 1rem;">Please use the contact form above, I will try my best to get back to you within two business days.</li>
 <br><br>
                 <li><b>WHY IS THE STORE NOT UP?</b></li>
                 <li style="padding-top: .5rem; padding-left: 1rem;">Oopsie! I blame Butterbee! Go ahead and shoot me a message!</li>
