--- a/finishwebsite/index.html
+++ b/finishwebsite/index.html
@@ -42,7 +42,7 @@
             <a style="font-size: 28px; font-weight: bold; ">Who is Keyla Jones?</a>
         <br>
             <p style="padding-left: 1.5rem; padding-top: 1rem;">(Like Tequila without the Te) Keyla is the creator and animator of the original cartoon series, Butterbee. She is also a self-taught singer-songwriter (ukulele/guitar), novelist, cardboard furniture builder, and fake mustache enthusist. </a>
-            <br><a href="about.html" style="color: black; font-weight: bold;">Read more about the insane adventure here</p></a>
+            <br><a href="aboutme.html" style="color: black; font-weight: bold;">Read more about the insane adventure here</p></a>
           </p></p>
              <div style="display: flex; justify-content: space-between; padding-right: 5mm; padding-left: 5mm; padding-top: 1rem;">
     </div>
