--- a/finishwebsite/contact.html
+++ b/finishwebsite/contact.html
@@ -30,7 +30,7 @@
 <!--contact form-->
     
     <div style="display: flex; align-self: center;align-content: center;align-items: center; width: 50%; padding-left: 20rem;">
-        <form>
+        <form action="https://formspree.io/signedkeylajones@gmail.com" method="post">
             <div style="display: flex;">
                 <input style="margin-bottom: .5rem; margin-right: 1rem; flex: 1;"  type="text" name="name" placeholder="Full Name" required>
                 <input style="margin-bottom: .5rem; flex: 1;"  type="text" name="email" placeholder="Email Address" required>
