--- a/finishwebsite/music.html
+++ b/finishwebsite/music.html
@@ -23,7 +23,7 @@
         <a href="contact.html"><img class="menu-link" src="css/images/contactb.png" width="80%"></a>
 </div>
 
-<img src="css/images/keyla.jpg" width="100%" style="padding-top: 8rem; align-self: center;">
+<img src="css/images/bbmusic.png" width="100%" style="padding-top: 8rem; align-self: center;">
 
 
 </div>
