--- a/finishwebsite/butterbee.html
+++ b/finishwebsite/butterbee.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="aboutbox" style="padding-left: .5rem; padding-right: .5rem;"> 
-                <a href="#">
+                <a href="https://www.youtube.com/watch?v=zmbHpy44KG0&t=2s">
                     <img src="css/images/bb_ep1.png" height="255px" width="290px">
                 </a>
         </div>
