--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css" />
     <link rel="stylesheet" href="css/style.css">
+    <meta name="keywords" content="Signed Keyla Jones, Cartoonist, tacoma, washington, Animator portfolio, youtube cartoon, butterbee, novelist, unsigned singer-songwriter, ">
+    <meta name="description" content="Signed Keyla Jones is a Washington cartoonist, animator, novelist, and signer-songwriter. She is known for her original youtube cartoon series, Butterbee.">
+    <meta name="Keyla Jones">
 </head>
 
 <body>
