--- a/finishwebsite/index.html
+++ b/finishwebsite/index.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Signed Keyla Jones</title>
+    <title>Signed Keyla Jones - Creater of Cartoon Series, Butterbee.</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css" />
-
     <link rel="stylesheet" href="css/style.css">
+    <meta name="keywords" content="Signed Keyla Jones, Cartoonist, tacoma, washington, Animator portfolio, youtube cartoon, butterbee, novelist, unsigned singer-songwriter, ">
+    <meta name="description" content="Signed Keyla Jones is the Creator of Youtube based Cartoon Series, Butterbee. She is also a novelist and singer-songwriter.">
+    <meta name="Keyla Jones">
 
 </head>
 
