--- a/finishwebsite/aboutme.html
+++ b/finishwebsite/aboutme.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Signed Keyla Jones</title>
+    <title>About Me | Signed Keyla Jones</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css" />
-
     <link rel="stylesheet" href="css/style.css">
+    <meta name="keywords" content="Signed Keyla Jones, about me, homeschooled, Cartoonist, phoenix arizona,, Animator portfolio, youtube cartoon, butterbee, novelist, unsigned singer-songwriter, ">
+    <meta name="description" content="Keyla Jones was raised in Phoenix, Arizona. She spent her time drawing cartoons, writing songs, and short stories. She was homeschooled with her three brothers and...>   She is also a novelist and singer-songwriter.">
+    <meta name="Keyla Jones">
 
 </head>
 
