--- a/finishwebsite/aboutme.html
+++ b/finishwebsite/aboutme.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css" />
     <link rel="stylesheet" href="css/style.css">
     <meta name="keywords" content="Signed Keyla Jones, about me, homeschooled, Cartoonist, phoenix arizona,, Animator portfolio, youtube cartoon, butterbee, novelist, unsigned singer-songwriter, ">
-    <meta name="description" content="Keyla Jones was raised in Phoenix, Arizona. She spent her time drawing cartoons, writing songs, and short stories. She was homeschooled with her three brothers and...>   She is also a novelist and singer-songwriter.">
+    <meta name="description" content="Keyla Jones was raised in Phoenix, Arizona. She spent her time drawing cartoons, writing songs, and short stories. She was homeschooled with her three brothers and...>
     <meta name="Keyla Jones">
 
 </head>
