--- a/finishwebsite/butterbee.html
+++ b/finishwebsite/butterbee.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Signed Keyla Jones</title>
+    <title>Butterbee, Original Cartoon| Signed Keyla Jones</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css" />
-
     <link rel="stylesheet" href="css/style.css">
+    <meta name="keywords" content="Butterbee, Signed Keyla Jones, Cartoon series, Animator portfolio, youtube cartoon, butterbee, little green creature cartoon, alan fairy.">
+    <meta name="description" content="Butterbee is an original cartoon series on YouTube. The story follows an adorable little green creature gets into trouble, due to his childish and stubborn attitude. Alan, his guardian fairy, spends most of his time trying to get Butterbee out of trouble though... ">
+    <meta name="Keyla Jones">
 
 </head>
 
