--- a/finishwebsite/picturepurrfect.html
+++ b/finishwebsite/picturepurrfect.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Signed Keyla Jones</title>
+    <title>Picture Purrfect Studios | Signed Keyla Jones</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css" />
-
     <link rel="stylesheet" href="css/style.css">
+    <meta name="keywords" content="Signed Keyla Jones, Butterbee, picture purrfect studios, animation studio, cartoon series, youtube cartoon, cats">
+    <meta name="description" content="Picture Purrfect Studios Created the Original Youtube Cartoon Series, Butterbee. The intro animation was inspired by my brothers eight cats to learn their names and their stories click here...">
+    <meta name="Keyla Jones">
 
 </head>
 
