--- a/finishwebsite/aboutme.html
+++ b/finishwebsite/aboutme.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="keywords" content="Signed Keyla Jones, about me, homeschooled, Cartoonist, phoenix arizona,, Animator portfolio, youtube cartoon, butterbee, novelist, unsigned singer-songwriter, ">
     <meta name="description" content="Keyla Jones was raised in Phoenix, Arizona. She spent her time drawing cartoons, writing songs, and short stories. She was homeschooled with her three brothers and...>
-    <meta name="Keyla Jones">
+    <meta name="author" content="Keyla Jones">
 
 </head>
 
