--- a/finishwebsite/contact.html
+++ b/finishwebsite/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="keywords" content="Butterbee, Signed Keyla Jones, Cartoon series, Animator portfolio, youtube cartoon, contact, business inquiry">
     <meta name="description" content="Signed Keyla Jones is the Creator of Youtube based Cartoon Series, Butterbee. She is also a novelist and singer-songwriter.">
-    <meta name="Keyla Jones">
+    <meta name="author" content="Keyla Jones">
 </head>
 
 <body>
