--- a/finishwebsite/index.html
+++ b/finishwebsite/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="keywords" content="Signed Keyla Jones, Cartoonist, tacoma, washington, Animator portfolio, youtube cartoon, butterbee, novelist, unsigned singer-songwriter, ">
     <meta name="description" content="Signed Keyla Jones is the Creator of Youtube based Cartoon Series, Butterbee. She is also a novelist and singer-songwriter.">
-    <meta name="Keyla Jones">
+    <meta name="author" content="Keyla Jones">
 
 </head>
 
