--- a/finishwebsite/music.html
+++ b/finishwebsite/music.html
@@ -11,7 +11,7 @@
 
     <meta name="keywords" content="Signed Keyla Jones, ukulele singer, guitar singer, singer-songwriter, americana, folk, original artist, unsigned songwriter">
     <meta name="description" content="Signed Keyla Jones is an emerging Singer-Songwriter, self taught guitarist and ukuleleist. Known for her powerful original songs of love, heartbreak, and tragedies. ">
-    <meta name="Keyla Jones">
+    <meta name="author" content="Keyla Jones">
     
     
 </head>
