--- a/finishwebsite/picturepurrfect.html
+++ b/finishwebsite/picturepurrfect.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="keywords" content="Signed Keyla Jones, Butterbee, picture purrfect studios, animation studio, cartoon series, youtube cartoon, cats">
     <meta name="description" content="Picture Purrfect Studios Created the Original Youtube Cartoon Series, Butterbee. The intro animation was inspired by my brothers eight cats to learn their names and their stories click here...">
-    <meta name="Keyla Jones">
+    <meta name="author" content="Keyla Jones">
 
 </head>
 
