--- a/finishwebsite/picturepurrfect.html
+++ b/finishwebsite/picturepurrfect.html
@@ -60,7 +60,7 @@
         <img src="css/images/cats/lefty2.png" height="300px" width="300px" style="padding: .5rem;">
         <img src="css/images/cats/c_leftie.png" height="300px" width="300px" style="padding: .5rem;">
     </div>
-        <p align="center" style="display: block; padding-left: .5rem; font-size: 22px; align-self: center; width: 60%;"><strong style="color: #ff2151;">Meet Lefty:</strong> <br>Lefty is ...Something?<br>he.
+        <p align="center" style="display: block; padding-left: .5rem; font-size: 22px; align-self: center; width: 60%;"><strong style="color: #ff2151;">Meet Lefty:</strong> <br>Lefty is ...something?<br>
         </p>
 </div>
 
