--- a/contact.html
+++ b/contact.html
@@ -93,11 +93,11 @@
             <div class="row">
               <div class="col-md-6 form-group">
                 <label for="name" required>*Name</label>
-                <input type="text" id="name" class="form-control " placeholder="John Doe">
+                <input type="text" id="name" name="name" class="form-control " placeholder="John Doe">
               </div>
               <div class="col-md-6 form-group">
                 <label for="phone">Phone</label>
-                <input type="text" id="phone" class="form-control " placeholder="(000) 000-0000">
+                <input type="text" id="phone" name="phone" class="form-control " placeholder="(000) 000-0000">
               </div>
             </div>
             <div class="row">
@@ -108,7 +108,7 @@
             <div class="row">
               <div class="col-md-12 form-group">
                 <label for="email" required>*Email</label>
-                <input type="email" id="email" class="form-control " placeholder="Insert your email address here">
+                <input type="email" id="email" name="email" class="form-control " placeholder="Insert your email address here">
               </div>
             </div>
             <div class="row">
