--- a/music.html
+++ b/music.html
@@ -93,7 +93,7 @@
         <div class="col-md-5 mr-auto" data-aos="fade-up" data-aos-delay="">
 
           <h2 class="mb-4 section-title">Signed Keyla Jones</h2>
-          <p>Seneca, SC based singer-songwriter, Signed Keyla Jones, is an up and coming Country Pop singer-songwriter, known for her powerful vocals and beautiful original songs that take you on a journey through tragic tales and inspiring love stories.</p>
+          <p>Seneca, SC, based singer-songwriter, Signed Keyla Jones, is an up and coming Country Pop singer-songwriter. She is known for her powerful vocals and beautiful original songs that take you on a journey through tragic tales and inspiring love stories.</p>
           <br>
           <p style="font-weight: bold; font-size: 15px; text-decoration: underline;">Genres:</p>
           <p>Folk Music, Country Pop, Singer-Songwriter</p>
@@ -165,10 +165,10 @@
         </div>
         <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="">
           <h2 class="mb-4 section-title">History</h2>
-          <p>Keyla Jones was homeschooled with her three brothers in her howntown of Phoenix, AZ. She has dyslexic so her mother/teacher incouraged her to work on things she loved. She began writing songs at the age of three and hasn't stopped a day since.
-            <br>She bought her first guitar at 16 years old and taught herself how to play through the power of the internet and Youtube. 
-            <br>Since then she has preformed at many different venues across Arizona and Washington State, including: Arizona State Fair, Mesa Music Festival, Making a Difference Day for kids with disabilities, Rock the Dock, etc. </p>
-            <p>Keyla is a self taught songwriter, Guitartist, Ukuleleist, and Pianist.</p>
+          <p>Keyla Jones was homeschooled with her three brothers in her hometown of Phoenix, AZ. She has dyslexia so her mother/teacher encouraged her to work on the things she loved. She began writing songs at the age of three and hasn't stopped a day since. 
+            <br>She bought her first guitar at sixteen years old and taught herself how to play through the power of the internet and Youtube. 
+            <br>Since then she has performed at many different venues across Arizona and Washington State, including, Arizona State Fair, Mesa Music Festival, Making a Difference Day for kids with disabilities, Rock the Dock, etc. </p>
+            <p>Keyla is a self-taught songwriter, Guitarist, Ukuleleist, and Pianist.</p>
         </div>
       </div>
     </div>
