--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <span class="icon icon-magnifier mb-4 d-block"></span>
             <a href="contact.html"> 
             <h3>Contact</h3>
-            <p>For Inquires, Comments, or Feedback, Please Click Here.</p></a>
+            <p>For Inquiries, Comments, or Feedback, Please Click Here.</p></a>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
           
 
           <h2 class="mb-4 section-title">Picture Purrfect Studios</h2>
-          <p>Picture Purrfect Studios was created by Keyla Jones as a place to showcase all of her artwork. The name and animation was inspired by ten beautiful cats, nine of which are her brothers. 
+          <p>Picture Purrfect Studios was created by Keyla Jones as a place to showcase all of her artwork. The name and animation were inspired by ten beautiful cats, nine of which are her brothers. 
             </p><p>To learn more about Picture Purrfect Studios and these amazing cats, click below.</p>
           
           <p><a href="cats.html" class="btn btn-outline-black">Learn More</a></p>
