--- a/dearmrsomebody.html
+++ b/dearmrsomebody.html
@@ -94,7 +94,7 @@
           <div class="">
             <h3 class="mb-4">Summary and Details</h3>
             <p>
-              Think dating in the new age is hard? Well try being a 24 year old, borderline asexual woman that is completely against having kids or marriage, but still hold on hope to finding her better half. Luckily, fate is on her side and her life takes an unexpected turn when she meets Fin, a 26 year old weirdo that’s still trying to get his life together, who completely steals her heart. Between the childish shenanigans, hilarious misunderstanding, morbid jokes, borderline psycho dates, a very involved and super religious mother, and their two wacky friends, it’s a insane miracle these two found each other. 
+              Think dating in the new age is hard? Well, try being a 24-year-old, borderline asexual woman that is completely against having kids or marriage, but still holds hope of finding her better half. Luckily, fate is on her side and her life takes an unexpected turn when she meets Fin, a 26-year-old weirdo that’s still trying to get his life together, who completely steals her heart. Between the childish shenanigans, hilarious misunderstanding, morbid jokes, borderline psycho dates, a very involved and super-religious mother, and their two wacky friends, it’s an insane miracle these two found each other.
             </p>
             <ul class="list-unstyled mb-5">
               <li class="mb-3">
