--- a/butterbee.html
+++ b/butterbee.html
@@ -140,7 +140,7 @@
               <img src="images/bb/ep1.png" alt="Image Placeholder" class="img-fluid"></a>
             <div class="media-body">
               <h3 class="mt-0 text-black">Butterbee Pilot Episode</h3>
-              <p>It all atarted with this episode</p>
+              <p>It all started with this episode</p>
             </div>
           </div>
         </div>
